<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hikingbackgroundblur"
    tools:context=".Age">

    <Button
        android:id="@+id/button"
        android:layout_width="116dp"
        android:layout_height="63dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="188dp"
        android:onClick="buttonActivityNext"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ageLevelPrompt"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="516dp"
        android:background="@color/lightwhite"
        android:text="What is your age?"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="335dp"
        android:background="@color/lightwhite"
        android:entries="@array/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>