...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/hikingbackground">

    <Button
        android:id="@+id/mainStartButton"
        android:layout_width="215dp"
        android:layout_height="113dp"
        android:layout_marginBottom="48dp"
        android:onClick="startProfile"
        android:text="Start Your Journey Here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
...
